[project]
name = "mlr-takehome"
version = "0.1.0"
description = "Take home interview for Tilde MLR"
readme = "README.md"
requires-python = "<3.12, >=3.11"
dependencies = [
    "accelerate==1.1.1",
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.11.7",
    "aiosignal==1.3.1",
    "asttokens==2.4.1",
    "attrs==24.2.0",
    "beautifulsoup4==4.12.3",
    "bert-score==0.3.13",
    "blessed==1.20.0",
    "bs4==0.0.2",
    "cachetools==5.5.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "datasets==2.21.0",
    "debugpy==1.8.9",
    "decorator==5.1.1",
    "dill==0.3.8",
    "einops==0.8.0",
    "executing==2.1.0",
    "filelock==3.16.1",
    "fire==0.6.0",
    "flash-attn==2.7.0.post2",
    "fonttools==4.55.0",
    "frozenlist==1.5.0",
    "fsspec==2024.6.1",
    "gpustat==1.1.1",
    "huggingface-hub==0.26.2",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==8.29.0",
    "jedi==0.19.2",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.7",
    "lm-eval",
    "markupsafe==3.0.2",
    "matplotlib==3.9.2",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "multiprocess==0.70.16",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numpy==2.1.3",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-ml-py==12.535.161",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "nvitop==1.3.2",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.0.0",
    "platformdirs==4.3.6",
    "prompt-toolkit==3.0.48",
    "propcache==0.2.0",
    "protobuf==5.28.3",
    "psutil==6.1.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==18.0.0",
    "pygments==2.18.0",
    "pyparsing==3.2.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rouge==1.0.1",
    "safetensors==0.4.5",
    "scipy==1.14.1",
    "seaborn==0.13.2",
    "sentencepiece==0.2.0",
    "setuptools>=78.1.0",
    "six==1.16.0",
    "soupsieve==2.6",
    "stack-data==0.6.3",
    "sympy==1.13.1",
    "termcolor==2.5.0",
    "tokenizers==0.21.0",
    "torch==2.5.1",
    "tornado==6.4.2",
    "tqdm==4.67.0",
    "traitlets==5.14.3",
    "transformers==4.48.3",
    "triton==3.1.0",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "wcwidth==0.2.13",
    "wheel>=0.45.1",
    "wonderwords>=2.2.0",
    "xxhash==3.5.0",
    "yarl==1.18.0",
]

[tool.uv.sources]
lm-eval = { path = "eval", editable = true }

[tool.uv]
# This tells uv to build flash-attn directly in the main environment,
# giving it access to the installed 'torch' package.
no-build-isolation-package = ["flash-attn"] 
